# drill

./: .asf.yaml  .dockerignore  .editorconfig  .gitignore  .lgtm.yml  .ratignore  .travis.yml  AGENTS.md  CLAUDE.md  DISCLAIMER  Dockerfile  INSTALL.md  KEYS  LICENSE  LINTER_RESULTS.md  NOTICE  README.md  SECURITY.md  THREAT_MODEL.md  TODO.md  _config-prod.yml  _config.yml  apacheASF.html  architecture.html  blog.html  build-frontend.sh  community-resources.md  community.html  data.html  doap_Drill.rdf  docs.html  download.html  faq.md  header  index.html  lombok.config  mailinglists.md  overview.html  pom.xml  poweredBy.html  (+8 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
_data/: articles.json  authors.json  docs.json  poweredby.json  version.json
_docs/: 0001-DRILL-2720.patch  001-arch.md  001-architectural-overview.md  001-drill-docs.md  001-user-guide.md  002-admin-guide.md  002-tutorial.md  002-tutorials.md  003-yelp.md  004-install.md  005-connect.md  006-interfaces.md  007-query.md  008-sql-ref.md  009-datasources.md  010-dev-custom-func.md  010-getting-started.md  011-manage.md  012-develop.md  012-rn.md  014-contribute.md  014-sample-ds.md  016-design.md  016-progress.md  017-archived-pages.md  019-bylaws.md  020-architecture.md  030-tutorials.md  031-drill-on-yarn.md  040-install.md  045-configure-drill.md  050-connect.md  060-odbc-jdbc-interfaces.md  070-query-data.md  072-performance-tuning.md  073-log-and-debug.md  074-query-audit-logging.md  075-getting-query-information.md  080-sql-ref.md  080-sql-reference.md  (+12 more)
_includes/: authors.html  breadcrumbs.html  breadcrumbs.html.gen  (+12 more)
contrib/native/client/: CMakeLists.txt  readme.boost  readme.linux  readme.macos  readme.sasl  readme.ssl  readme.win.txt
contrib/native/client/cmakeModules/: FindZookeeper.cmake
contrib/native/client/example/: pooledConnections.cpp  querySubmitter.cpp
contrib/native/client/patches/: zookeeper-3.4.6-x64.patch
contrib/native/client/resources/: parquet_scan_union_screen_physical.json  simple_plan.json
contrib/native/client/scripts/: cpProtofiles.sh  fixProtodefs.sh
contrib/native/client/src/clientlib/: CMakeLists.txt  channel.cpp  channel.hpp  collectionsImpl.hpp  decimalUtils.cpp  drillClient.cpp  drillClientImpl.cpp  drillClientImpl.hpp  drillConfig.cpp  drillError.cpp  env.h.in  errmsgs.cpp  errmsgs.hpp  fieldmeta.cpp  logger.cpp  logger.hpp  metadata.cpp  metadata.hpp  recordBatch.cpp  rpcDecoder.cpp  rpcDecoder.hpp  rpcEncoder.cpp  rpcEncoder.hpp  rpcMessage.cpp  rpcMessage.hpp  saslAuthenticatorImpl.cpp  saslAuthenticatorImpl.hpp  streamSocket.hpp  userProperties.cpp  utils.cpp  utils.hpp  wincert.ipp  zookeeperClient.cpp  zookeeperClient.hpp
contrib/native/client/src/clientlib/y2038/: CMakeLists.txt  time64.c  time64.h  time64_config.h  time64_limits.h
contrib/native/client/src/include/drill/: collections.hpp  common.hpp  decimalUtils.hpp  drillClient.hpp  drillConfig.hpp  drillError.hpp  drillc.hpp  fieldmeta.hpp  preparedStatement.hpp  recordBatch.hpp  userProperties.hpp
contrib/native/client/src/include/drill/protobuf/: Types.pb.h  User.pb.h
contrib/native/client/src/protobuf/: BitControl.pb.cc  BitControl.pb.h  BitData.pb.cc  BitData.pb.h  CMakeLists.txt  Coordination.pb.cc  Coordination.pb.h  ExecutionProtos.pb.cc  ExecutionProtos.pb.h  GeneralRPC.pb.cc  GeneralRPC.pb.h  SchemaDef.pb.cc  SchemaDef.pb.h  Types.pb.cc  User.pb.cc  User.pb.h  UserBitShared.pb.cc  UserBitShared.pb.h
contrib/native/client/src/test/: CMakeLists.txt  CollectionsTest.cpp  UtilsTest.cpp  main.cpp
contrib/native/client/test/ssl/: testClient.cpp  testSSL.cpp  testServer.cpp
(+25127 files in other folders)
